apps/base/pricebuddy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pricebuddy
  namespace: pricebuddy
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd,traefik-security-headers@kubernetescrd,traefik-rate-limit-standard@kubernetescrd,traefik-csp@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pricebuddy.h0melab.work
      secretName: pricebuddy-tls-secret
  rules:
    - host: pricebuddy.h0melab.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pricebuddy
                port:
                  number: 80
